@@ -1,7 +1,22 @@
+#
+# remove KGS 3.4 before commit!!!!!!!!!!!!
+#
+
 [buildout]
+extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
+versions = versions
 develop = .
 
 parts = test checker coverage
+
+[versions]
+z3c.indexer = 0.5.1
+z3c.authenticator = 0.6.0
+zc.configuration = 1.0
+z3c.jsonrpc = 0.5.2
+z3c.menu.ready2go = 0.5.1
+z3c.searcher = 0.5.1
+
 
 [test]
 recipe = zc.recipe.testrunner
